:bug: Fix kl-menu overflow auto to overlay

--- a/src/js/components/navigation/KLMenu/KLSubMenu/index.scss
+++ b/src/js/components/navigation/KLMenu/KLSubMenu/index.scss
@@ -18,7 +18,7 @@
 
     @include e(arrow) {
         position: absolute;
-        right: 10px;
+        right: 15px;
         font-size: 18px;
         transition: transform .4s ease;
         transform: rotate(0);
